# edge-vla-hil

./: .gitignore  README.md  proposal.md  pytest.ini  requirements-host.txt  requirements-jetson.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docker/: Dockerfile.host  Dockerfile.jetson  entrypoint-host.sh  entrypoint-jetson.sh  ros_source.sh
experiments/pusht_sanity/: README.md  colab_pusht_sanity.ipynb  latency_chunking.py  requirements.txt  run_pusht.py  test_latency_chunking.py
ros2_ws/src/evh_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/evh_bringup/config/: default.yaml
ros2_ws/src/evh_bringup/evh_bringup/: benchmark.py
ros2_ws/src/evh_bringup/launch/: controller.launch.py  hil.launch.py  host.launch.py
ros2_ws/src/evh_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/evh_controller/evh_controller/: act_policy.py  chunk_executor.py  controller_node.py  policy.py
ros2_ws/src/evh_latency/: package.xml  setup.cfg  setup.py
ros2_ws/src/evh_latency/evh_latency/: latency_node.py
ros2_ws/src/evh_plant/: package.xml  setup.cfg  setup.py
ros2_ws/src/evh_plant/evh_plant/: plant_node.py
ros2_ws/src/evh_reactive/: package.xml  setup.cfg  setup.py
ros2_ws/src/evh_reactive/evh_reactive/: reactive_node.py
scripts/: build_trt_engine.py  export_onnx.py  run_sim_standalone.py
tests/: conftest.py  test_chunk_executor.py  test_latency_relay.py  test_nodes_boot.py  test_policy.py
