<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evh_latency</name>
  <version>0.0.1</version>
  <description>Programmable latency / jitter / packet-drop relay at the DDS boundary (HiL instrument).</description>
  <maintainer email="henrynguyen.vp@gmail.com">henry</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
